Replace deprecated wrapper constructors in the messages package
Same treatment the rest of the codebase got in 1641b06, which left this
package alone: new Integer(...)/new Boolean(...) -> Integer.valueOf/
Boolean.valueOf. The live old message queue itself is untouched.

132 tests green under Xvfb.